sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: illegal start of statement
	else 
        ^AlgGnomeSort:33: error: ';' expected but 'if' found.
} if (i== -1) 
  ^